--- a/nova/misc.css
+++ b/nova/misc.css
@@ -1,17 +1,5 @@
 /* Misc */
 
-/* Mark (highlight) */
-
-mark {
-    background-color: var(--color-muted-pink);
-    border-radius: 7px;
-    font-weight: bold;
-    color: var(--color-black);
-    line-height: 2;
-    padding: 3px 7px 3px 7px;
-    white-space: break-spaces;
-}
-
 
 
 /* Context menu */
@@ -88,8 +76,44 @@ kbd {
     box-shadow: inset 3px -3px 2px var(--color-keyboard-shadow);
 }
 
+/* Bold */
+strong {
+    background-color: inherit;
+    color: var(--color-orange);
+}
 
-/* Notification */
+/* Italic */
+em {
+    background-color: inherit;
+    color: var(--color-bright-purple)
+}
+
+/* Underline */
+u {
+    background-color: inherit;
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 3px solid var(--color-dark-cyan);
+    padding-bottom: 1px;
+}
+
+/* Strike */
+del {
+    color: var(--color-dark-white);
+    text-decoration: line-through;
+}
+
+/* Mark (highlight) */
+
+mark {
+    background-color: var(--color-muted-pink);
+    border-radius: 7px;
+    font-weight: bold;
+    color: var(--color-black);
+    line-height: 2;
+    padding: 3px 7px 3px 7px;
+    white-space: break-spaces;
+}
 
 #md-notification {
     background: var(--color-darker-gray);
@@ -120,30 +144,30 @@ kbd {
 /* Scrollbar */
 
 ::-webkit-scrollbar {
-    width: 11px;
-    padding-right: 10px;
-    padding-left: 10px;
-    background-color: var(--color-darker-gray);
+    width: 11px !important;
+    background: var(--color-darker-gray);
 }
 
 /* Scrollbar Thumb */
 ::-webkit-scrollbar-thumb {
-    background-color: var(--color-darkerer-cyan) !important;
+    background: var(--color-darkerer-cyan) !important;
     border-radius: 3px;
   }
 
 ::-webkit-scrollbar-thumb:hover,
 ::-webkit-scrollbar-thumb:active {
-    background-color: var(--color-darker-cyan) !important;
-    border-radius: 3px;
-  }
-
-/* Scrollbar Track */
-::-webkit-scrollbar-track:hover {
-    background-color: var(--color-darker-gray) !important;
+    background: var(--color-darker-cyan) !important;
     border-radius: 3px;
   }
   
+
+
+/* Scrollbar Track */
+::-webkit-scrollbar-track:hover {
+    background: var(--color-darkere-gray) !important;
+    border-radius: 3px;
+  }
+
 
   /* Math */
 
